# ClassifyMyDataset

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
doc/: CLASSIFY.JSON.md  CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  program_classify_launcher.py  program_prepare_launcher.py  pyproject.toml  toml_gen.py
src/classify_my_dataset/: about.py  desktop.py  program.py  program_generate.py  program_old.py  program_old1.py  program_prepare.py
src/edit-my-dataset/: generate_csv.py  main.py
src/edit-my-dataset/forms/: mainwindow.ui
