[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "classify_my_dataset"
version = "0.1.0"
description = "A graphic user interface program to work with labels and images in a classification dataset."
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["writing", "translate"]
dependencies = [
    "PyQt5",
    "pandas"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx-desktop/ClassifyMyDataset/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx-desktop/ClassifyMyDataset/tree/main/doc"
"Source" = "https://github.com/trucomanx-desktop/ClassifyMyDataset"

[project.scripts]
"classify-my-dataset" = "classify_my_dataset.program:main"
"prepare-classification-dataset" = "classify_my_dataset.program_prepare:main"

[tool.setuptools]
packages = ["classify_my_dataset", "classify_my_dataset.modules"]

[tool.setuptools.package-data]
"classify_my_dataset" = ["icons/*.png", "icons/*.svg"]
